<resources>
    <string name="app_name">College Life</string>
    <string name="action_settings">Settings</string>
    <string name="mainfragment" translatable="false">MainFragment</string>
    <string name="college_life">College Life</string>
    <string name="Name">Name:</string>
    <string name="Debt_d">  |  Debt: $</string>

    <string name="title_activity_home_screen" translatable="false">HomeScreen</string>
    <string name="start_button" translatable="false">Button</string>
    <string name="setting_logo" translatable="false">setting_logo</string>
    <string name="game_logo" translatable="false">game_logo</string>
    <string name="title_activity_homescreen" translatable="false">HomescreenActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="main_logo" translatable="false">main logo</string>
    <string name="options_logo" translatable="false" />
    <string name="desc" translatable="false">Image</string>
    <string name="setting_icon" translatable="false">setting_icon</string>
    <string name="settings_button" translatable="false">settings_button</string>
    <string name="settings" translatable="false">settings</string>
    <string name="Character_page_icon" translatable="false">Character_page_icon</string>
    <string name="player1" translatable="false">player1</string>
    <string name="enter_character_name">Enter Character Name</string>
    <string name="start_game">Start game</string>
    <string name="next_player">Next player</string>

    <string name="title_activity_game" translatable="false">GameActivity</string>
    <string name="game_image" translatable="false">game_image</string>
    <string name="play" translatable="false">press to play</string>
    <string name="Highscores" translatable="false">TextView</string>
    <string name="highscore" translatable="false">score</string>
    <string name="test" translatable="false">TEST</string>
    <string name="test_table" translatable="false">Test_table</string>
    <string name="top_score_1" translatable="false">TextView</string>
    <string name="top_score_2" translatable="false">TextView</string>
    <string name="place1" translatable="false">insert</string>
    <string name="insert2" translatable="false">insert2</string>
    <string name="insert3" translatable="false">insert3</string>
    <string name="delete_high_scores" translatable="false">delete high scores</string>
    <string name="Spade" translatable="false">Spade</string>
    <string name="Heart" translatable="false">Heart</string>
    <string name="Club" translatable="false">Club</string>
    <string name="Diamond" translatable="false">Diamond</string>
    <string name="update_lowest" translatable="false">update lowest</string>
    <string name="dean_list_student" translatable="false">Dean List Student</string>
    <string name="spin" translatable="false">SPIN</string>
    <string name="spinboard" translatable="false">spinboard</string>
    <string name="pointer" translatable="false">pointer</string>
    <string name="login" translatable="false">Login</string>
    <string name="title_activity_test" translatable="false">test</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="start">Start</string>
    <string name="logout" translatable="false">logout</string>
    <string name="GPA" translatable="false">GPA</string>
    <string name="Debt" translatable="false">Debt</string>
    <string name="backgroundgrid" translatable="false">backgroundgrid</string>
    <string name="happy_graduation">Happy Graduation</string>
    <string name="house" translatable="false">House</string>
    <string name="dog" translatable="false">Dog</string>
    <string name="description" translatable="false">You enter the Mobile App Development Club\nYou start to build your own mobile app</string>    <!-- temp longest string-->
    <string name="action" translatable="false">Go back to start</string><!-- temp only string-->
    <string name="remark" translatable="false">* If you have rent apartment</string>
    <string name="name" translatable="false">Name</string>
    <string name="current_player" >Current Player:</string>
    <string name="click_the_button_below_to_spin" >Click the button below to spin!</string>
    <string name="highscores">highscores</string>
    <string name="score_text" translatable="false">Congratulations! Here are final scores:</string> <!-- temp longest string-->

    <!-- Warning Message-->
    <string name="NeedLogo">Every player needs a logo!</string>
    <string name="NeedName">Enter Name!</string>
    <string name="MaxPlayer">Max players!</string>
    <string name="SingInPlease">Sign in Please</string>

    <string name="Welcome_1"> Welcome !! </string>
    <string name="Welcome_2"> You need to register for class</string>
    <string name="Community_1"> You attend a community service</string>
    <string name="Community_2"> Trying to give back to the society</string>
    <string name="Fall_1">Finally Break time !!</string>
    <string name="Fall_2">You went to Florida for fun</string>
    <string name ="Apartment1">You were kick off from your parent home</string>
    <string name ="Apartment2">You need to rent an apartment</string>
    <string name="BuyDog_1">You feel lonely</string>
    <string name="BuyDog_2">You decide to buy a dog</string>
    <string name="FailMidterm_1">You fail your mid-term exam</string>
    <string name="FailMidterm_2">You decide to drop the class a retake</string>
    <string name="MobileClub1">You enter the Mobile App Development Club</string>
    <string name="MobileClub2">You start to build your own mobile app</string>
    <string name="Spring_1">Break time Again!!</string>
    <string name="Spring_2">You went to Chicago for fun</string>
    <string name="MissClass_1">You overslept</string>
    <string name="MissClass_2">You miss the most important class</string>
    <string name="Hungry_1">You feel hungry</string>
    <string name="Hungry_2">It is grocery shopping time</string>
    <string name="electricityOff_1">Opp! Your electricity went off!</string>
    <string name="electricityOff_2">Did you pay your utilities bill?</string>
    <string name="PreRentHome">* If you have rent apartment</string>
    <string name="FinalGrade_1">Finals finally over ~~</string>
    <string name="FinalGrade_2">Here is your grade ~~</string>
    <string name="SecondSem_1">Happy second semester</string>
    <string name="SecondSem_2">you need to register for class again</string>
    <string name="BuyCar_1">You can’t go anywhere</string>
    <string name="BuyCar_2">You need to buy a car</string>
    <string name="RentRemind_1">Don’t forget your rent!</string>
    <string name="RentRemind_2">You no longer live with your parent</string>
    <string name="PetSick_1">You lovely dog get sick</string>
    <string name="PetSick_2">You need to take her to the pet</string>
    <string name="PrePet">* If you have buy a pet</string>
    <string name="ApplyScholarship_1">You try to pay off your loan</string>
    <string name="ApplyScholarship_2">You try to apply for scholarship</string>
    <string name="GameClub_1">You enter the Game Animation Club</string>
    <string name="GameClub_2">You start to build your own game</string>
    <string name="DropPhone_1">Oops! You drop your phone!</string>
    <string name="DropPhone_2">Touch screen no longer working</string>

    <string name="RegClass_s">Register a class</string>
    <string name="Community_s">Community service</string>
    <string name="FallTrip_s">Fall break trip</string>
    <string name="RentApart_s">Rent an apartment</string>
    <string name="ButPet_s">Buy a pet</string>
    <string name="DropClass_s">Dropping a class</string>
    <string name="JoinClub_s">Join a club</string>
    <string name="SpringTrip_s">Spring break trip</string>
    <string name="MissClass_s">Miss class</string>
    <string name="BuyFood_s">buy food</string>
    <string name="Utilities_s">pay utilities bills</string>
    <string name="FinalGrad_s">Get grade from a class</string>
    <string name="BuyCar_s">Buy car</string>
    <string name="PayRent_s">Pay rent</string>
    <string name="PetSick_s">Your pet got sick</string>
    <string name="ApplyScholarship_s">Apply for scholarship</string>
    <string name="DropPhone"> Drop and break your phone</string>
    <string name="choose_your_logo">Choose your logo</string>


</resources>
