<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.BoardActivity">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="55dp"
        tools:layout_editor_absoluteY="132dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="backgroundgrid1"
                android:scaleType="fitStart"
                android:src="@drawable/untitled" />

            <TableLayout
                android:layout_width="177dp"
                android:layout_height="wrap_content">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#C5E1A5">

                    <TextView
                        android:id="@+id/textViewStart"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="Start"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewGrid2"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="Grid1"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#C5E1A5">

                    <TextView
                        android:id="@+id/textViewGrid3"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="Grid1"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewGrid4"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="Grid1"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#C5E1A5">

                    <TextView
                        android:id="@+id/textViewGrid5"
                        android:layout_height="100dp"
                        android:text="Grid1"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewGrid6"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="Grid1"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#C5E1A5">

                    <TextView
                        android:id="@+id/textViewGrid7"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="Grid1"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewGrid8"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="Grid1"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#C5E1A5">

                    <TextView
                        android:id="@+id/textViewGrid9"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="Grid1"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewGrid10"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="Grid1"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#C5E1A5">

                    <TextView
                        android:id="@+id/textViewGrid11"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="Grid11"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewGrid12"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:text="Grid12"
                        android:textAlignment="center" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewGridGraduation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Happy Graduation"
                        android:textAlignment="center" />
                </TableRow>
            </TableLayout>



        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageHome"
        android:layout_width="60dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/home"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/imageDog"
        android:layout_width="60dp"
        android:layout_height="80dp"
        app:srcCompat="@drawable/dog"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/Debt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/Debt"
        android:textSize="30sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <TextView
        android:id="@+id/GPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:text="@string/GPA"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/SpinButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="69dp"
        android:layout_marginTop="492dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/spinboard2"
        android:contentDescription="@string/Spade"
        app:layout_constraintBottom_toTopOf="@+id/next_player"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>